Add unselect/unselectPiece event
Not the most intuitive name, since it's triggered only when we unselect on the orig square/piece

--- a/examples/index.html
+++ b/examples/index.html
@@ -73,6 +73,12 @@
           drop: () => {
             console.log('drop');
           },
+          pieceUnselect: (p) => {
+            console.log('pieceUnselect', p);
+          },
+          unselect: (s) => {
+            console.log('unselect', s);
+          }
         },
         promotion: {
           promotesTo: role => {
