Ignore empty brush in defs and add brush class to custom svg

--- a/examples/index.html
+++ b/examples/index.html
@@ -110,7 +110,7 @@
         const shape = {
           orig: '5e',
           dest: '7e',
-          brush: 'primary',
+          brush: '',
           description: '+',
         };
         ground.setAutoShapes([shape]);
