--- a/examples/hands.html
+++ b/examples/hands.html
@@ -17,6 +17,7 @@
         <a href="minis.html">Mini Boards</a>
         <a href="d5x5.html">Small Board (5x5)</a>
         <a href="d12x12.html">Big Board (12x12)</a>
+        <a href="d9x10.html">Rectangular board (9x10)</a>
       </nav>
       <div class="wrap" style="display: flex">
         <div id="hand-top" class="sg-hand-wrap"></div>
