--- a/examples/index.html
+++ b/examples/index.html
@@ -18,6 +18,7 @@
         <a href="minis.html">Mini Boards</a>
         <a href="d5x5.html">Small Board (5x5)</a>
         <a href="d12x12.html">Big Board (12x12)</a>
+        <a href="d9x10.html">Rectangular board (9x10)</a>
       </nav>
       <div style="width: 500px; height: 500px" id="main-wrap" class="main-board">
         <div id="dirty" class="sg-wrap"></div>
