--- a/examples/index.html
+++ b/examples/index.html
@@ -73,6 +73,9 @@
             },
           },
         },
+        drawable: {
+          forced: false,
+        },
         events: {
           move: () => {
             console.log('move');
