Set printWidth to 100

--- a/examples/d12x12.html
+++ b/examples/d12x12.html
@@ -37,7 +37,8 @@
     <script>
       const config = {
         sfen: {
-          board: '1lnsgkkgsnl1/12/2r6b2/pppppppppppp/12/11p/P10P/12/PPPPPPPPPPPP/2B6R2/12/1LNSGKKGS+NL1',
+          board:
+            '1lnsgkkgsnl1/12/2r6b2/pppppppppppp/12/11p/P10P/12/PPPPPPPPPPPP/2B6R2/12/1LNSGKKGS+NL1',
         },
         activeColor: 'sente',
         coordinates: {
