Update coordinates examples

--- a/examples/d12x12.html
+++ b/examples/d12x12.html
@@ -42,7 +42,8 @@
         },
         activeColor: 'sente',
         coordinates: {
-          notation: 3,
+          files: 'dizhi',
+          ranks: 'japanese',
         },
         hands: {
           enabled: false,
