--- a/examples/minis.html
+++ b/examples/minis.html
@@ -89,7 +89,7 @@
           hands: { enabled: false },
           drawable: { visible: false },
         },
-        { board: boards[i] }
+        { board: boards[i] },
       );
     }
     // log the duration (deferred by 0ms timer)
