--- a/examples/d12x12.html
+++ b/examples/d12x12.html
@@ -56,7 +56,7 @@
           },
         },
         events: {
-          select: key => {
+          select: (key) => {
             console.log(key);
           },
         },
@@ -104,7 +104,7 @@
             ['7g', undefined],
             ['8g', undefined],
             ['6i', undefined],
-          ])
+          ]),
         );
       }
       function reconf() {
